# Frontend

./: .gitignore  README.md  networking.js  pyproject.toml  requirements.txt
client/: index.html  networking.js  package-lock.json  package.json
client/src/: Layout.jsx  i18n.js  index.css  main.jsx
client/src/components/: 5DayAdvanceLineChart.jsx  AdvanceLineChart.jsx  AvgAdvanceLineChart.jsx  ByDateBarChart.jsx  ByStationLineChart.jsx  Navbar.jsx
client/src/contexts/: LanguageContext.jsx
client/src/extensions/: useShowToast.js
client/src/hooks/: useLanguage.js
client/src/locale/: cn.json  en.json
client/src/pages/: AboutUs.jsx  Dashboard.jsx  Homepage.jsx  NotFound.jsx  test.jsx
server/: README.md  pyproject.toml  testmongo.py
server/src/show/: app.py
server/src/show/templates/: by_date.html  home.html
show/: app.py
show/templates/: by_station.html
src/: i18n.js  main.jsx
src/components/: ByStationLineChart.jsx  Navbar.jsx
src/locale/: cn.json  en.json
src/pages/: AboutUs.jsx  Dashboard.jsx  Homepage.jsx
src/show/: app.py
src/show/templates/: base.html
